--- a/resources/sass/site-components/footer.scss
+++ b/resources/sass/site-components/footer.scss
@@ -1,10 +1,9 @@
 #app {
   #site-wrapper {
     #footer {
+      @include body-bg;
       grid-area: footer;
       border-radius: 15px;
-      background-color: var(--body-color);
-      backdrop-filter: blur(5px);
       width: 100%;
       display: grid;
       grid-template:
