--- a/resources/sass/site-components/masterlist.scss
+++ b/resources/sass/site-components/masterlist.scss
@@ -132,7 +132,7 @@ fieldset.masterlist-search-grid {
       width: calc(100% - 20px);
       grid-area: thumb;
       place-self: center;
-      background-color: var(--clr-active-50);
+      background-color: var(--active-clr_50);
       border-radius: 15px;
       //-> contain: paint;
       display: grid;
