--- a/resources/sass/site-components/navbar.scss
+++ b/resources/sass/site-components/navbar.scss
@@ -52,7 +52,7 @@
         padding: 0 5px;
         &:hover {
           transition: 0.1s ease;
-          background-color: var(--clr-active-700);
+          background-color: var(--active-clr_700);
         }
         &.nav-notifications {
           width: 2.5em;
